dark mode fixes

--- a/src/scss/theme/dark/block.scss
+++ b/src/scss/theme/dark/block.scss
@@ -131,11 +131,15 @@
 
     .block.blockLink {
         .sides { border-color: $colorLinePrimary !important; }
-        .cardName span::before { background: $colorLinePrimary !important; }
+        .cardName span::before { background: $colorSecondary !important; }
 
         .linkCard.card {
             .sides { background: $colorBgLight; }
             .cover { color: $colorPrimary; }
+
+            .side.right {
+                .cardDescription { color: $colorSecondary; }
+            }
         }
 
         .loading, .deleted { color: $colorSecondary; }
